--- a/public/stylesheets/control.css
+++ b/public/stylesheets/control.css
@@ -79,8 +79,37 @@
   margin: 15% auto;
   /* 15% from the top and centered */
   padding: 20px;
-  border: 1px solid #888;
-  width: 80%;
+  border: 3px solid black;
+  width: 50%;
   height: 30%;
+  border-radius: 15px;
+  background-color: wheat;
+}
+
+.modal-content p {
+  font-family: 'Righteous', cursive;
+  font-size: 1.2rem;
+}
+
+.modal-content input {
+  margin-bottom: 25px;
+}
+
+.modal-content div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.modal-content button {
+  font-size: 1.2rem;
+  padding: 10px;
 }
 /*# sourceMappingURL=control.css.map */
