--- a/public/stylesheets/newsfeed.scss
+++ b/public/stylesheets/newsfeed.scss
@@ -1,5 +1,64 @@
 main {
     display: block;
-    max-width: 700px;
+    max-width: 600px;
     margin: 0 auto;
+}
+
+.post-form {
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 20px 0;
+    margin-bottom: 20px;
+}
+.post-form form {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    margin: 0 auto;
+    textarea {
+        width: 100%;
+        height: 100px;
+    }
+
+}
+.btn {
+    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    border: 1px solid black;
+    padding: 10px; 
+    border-radius: 3px;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    li a {
+        width: 100%;
+    }
+}
+
+.bubbble-post {
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 4px;
+    margin-bottom: 5px;
+    list-style-type: none;
+}
+.row1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 15px;
+}
+#postImg {
+    width: 100px;
+}
+.post-div {
+    display: flex;
+    flex-direction: row;
+}
+.newsfeed {
+    padding-bottom: 30px;
+    margin-bottom: 30px;
 }
