--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -12,15 +12,21 @@
 
 
 </head>
-<body>
+<body class="">
     <header>
+        <img id="headerImg" src="" alt="Weather Icon">
+
         <h1>Bubbble</h1>
+
     </header>
-<body>
+<main>
 <div class="container">
-    <form action="/control" method="post">
-        <button type="submit">Go Back</button>
-    </form>
+    <div class="row1">
+        <form action="/control" method="post">
+            <button class="btn" type="submit">Return to Home</button>
+        </form>
+        <div>Weather in <span id="cityName"><%= user.user_location %></span>: <span id="theWeather"></span></div>
+    </div>
 <h2>Database Results</h2>
 
 <ul>
@@ -30,9 +36,34 @@
 </ul>
 
 </div>
+        <script>
+            function getWeather(cityName) {
+                cityName = cityName.replace(" ", "&20");
+                apiURL = "https://api.openweathermap.org/data/2.5/weather?q=" + cityName + "&units=imperial&APPID=d7ffb76f27d5f75f6ce4b7817252176f";
+                console.log(apiURL);
+                fetch(apiURL)
+                    .then((response) => response.json())
+                    .then((jsObject) => {
+                        var temp = jsObject.main.temp;
+                        var desc = jsObject.weather[0].main;
+                        document.getElementById("theWeather").innerHTML = desc;
+                        document.body.classList = "";
+                        document.body.classList = desc;
+                        document.getElementById("headerImg").src = "/images/weather/" + desc + ".png";
+                        document.getElementById("postImg").src = "/images/weather/" + desc + ".png";
 
-</body>
+                    });
+            } 
+
+            window.onload = function () { 
+                let city = document.getElementById('cityName').innerHTML;
+                getWeather(city);    
+            }
+       </script>
+</main>
 <footer>
   <p>&copy; Ethan Tindall 2021 - CSE341: Backend 2 - Project 2</p>
 </footer>
+</body>
+
 </html>
