--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -42,6 +42,7 @@
                 <input required type="text" name="username"><br>
                 <label>Password</label><br>
                 <input required type="password" name="password"><br>
+
                 <input type="submit" value="Sign In">
                 <p class="message"></p>
             </form>
@@ -61,6 +62,9 @@
                 
                 <label>Reenter Password*</label><br>
                 <input required type="password" name="password2"><br>    
+                
+                <label>City</label><br>
+                <input required type="text" name="city"><br>
                 
                 <input type="submit" value="Register">
 
