--- a/views/pages/newsfeed.ejs
+++ b/views/pages/newsfeed.ejs
@@ -33,11 +33,12 @@
                     <div class="post-div">
                     <img id="postImg" src="" alt="Weather Icon">
                     <textarea required name="postcontent" placeholder="What's on your mind?"></textarea></div><br>
-                    <div style="margin: 0 auto;"><label>Location:</label> <input type="text" name="location" disabled value="<%= user.user_location %>"></div><br>
+                    <div style="margin: 0 auto;"><span>Location: <%= user.user_location %></span><input type="hidden" name="postlocation" value="<%= user.user_location %>"></div><br>
+                    <input type="hidden" name="date" id="date" value="">
 
                     <button class="btn" type="submit">Create New Post</button>
                     <input type="hidden" name="id" value="<%= user.user_id %>">
-                    <input type="hidden" id="formWeather" name="weather" value="">
+                    <input type="hidden" id="formWeather" name="postweather" value="">
 
                 </form>
     
@@ -46,8 +47,8 @@
             <div class="newsfeed">
                 <ul>
                     <% posts.forEach(function(r) { %>
-                        <li class="bubbble-post">
-                                <div class="post-row"><img src="/images/weather/<%=r.post_weather %>.png"> <p><%= r.post_content %></p></div><br><hr> --<%= r.user_username %><br><%= r.post_date %><br><%= r.post_location %>
+                        <li class="bubbble-post <%=r.post_weather %>">
+                                <div class="post-row "><img src="/images/weather/<%=r.post_weather %>.png"> <p><%= r.post_content %></p></div><br><hr> --<%= r.user_username %><br><%= r.post_date %><br><%= r.post_location %>
                             </li>
                         </div>
                     <% }); %>
@@ -58,6 +59,14 @@
         </div>
         <script>
         function getWeather(cityName) {
+            //set date
+            n =  new Date();
+            y = n.getFullYear();
+            m = n.getMonth() + 1;
+            d = n.getDate();
+            document.getElementById("date").value = y + "/" + m + "/" + d;
+
+
             cityName = cityName.replace(" ", "&20");
             apiURL = "https://api.openweathermap.org/data/2.5/weather?q=" + cityName + "&units=imperial&APPID=d7ffb76f27d5f75f6ce4b7817252176f";
             console.log(apiURL);
@@ -67,6 +76,8 @@
                     var temp = jsObject.main.temp;
                     var desc = jsObject.weather[0].main;
                     document.getElementById("theWeather").innerHTML = desc;
+                    document.getElementById("formWeather").value = desc;
+
                     document.body.classList = "";
                     document.body.classList = desc;
                     document.getElementById("headerImg").src = "/images/weather/" + desc + ".png";
