--- a/views/pages/newsfeed.ejs
+++ b/views/pages/newsfeed.ejs
@@ -54,7 +54,7 @@
                 </ul>
                 
             </div> <!--newsfeed-->
-
+<!--test test test -->
         </div>
         <script>
         function getWeather(cityName) {
